# OpenLogi

./: .gitignore  CHANGELOG.md  Cargo.toml  FIXDRY.md  README.md  README_CN.md  devenv.nix  flake.nix  release-plz.toml
.github/actions/github-app-token-from-1password/: action.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml  windows-sign-dryrun.yml
.zed/: tasks.json
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  device_order.rs  hardware.rs  hook_runtime.rs  ipc.rs  orchestrator.rs
crates/openlogi-agent-core/src/watchers/: gesture.rs  inventory.rs
crates/openlogi-agent-core/tests/: wire_format.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  pairing.rs  server.rs  status_item.rs  takeover.rs  tray.rs
crates/openlogi-assets/src/: http.rs  index.rs  lib.rs  manifest.rs  metadata.rs
crates/openlogi-camera/: Cargo.toml
crates/openlogi-camera/src/: capture.rs  lib.rs  macos.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/: list.rs  mod.rs  snapshot.rs
crates/openlogi-cli/src/cmd/assets/: sync.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/src/: binding.rs  brand.rs  config.rs  device.rs  diagnostics.rs  lib.rs
crates/openlogi-gui/: Cargo.toml  build.rs
crates/openlogi-gui/dev/: Info.plist
crates/openlogi-gui/icon/: AppIcon.icns
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: app.rs  app_assets.rs  app_menu.rs  diagnostics.rs  i18n.rs  ipc_client.rs  main.rs  state.rs  theme.rs
crates/openlogi-gui/src/asset/: glow.rs  mod.rs  sync.rs
crates/openlogi-gui/src/components/: camera_preview.rs  carousel.rs  device_carousel.rs  device_view.rs  dpi_panel.rs  gesture_pad.rs  lighting_panel.rs  mod.rs  smartshift_panel.rs
crates/openlogi-gui/src/data/: mouse_buttons.rs
crates/openlogi-gui/src/mouse_model/: geometry.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: mod.rs  os.rs  permissions.rs  status_item.rs  tray.rs  updater.rs
crates/openlogi-gui/src/state/: devices.rs
crates/openlogi-gui/src/windows/: about.rs  add_device.rs  settings.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: gesture.rs  inventory.rs  lib.rs  pairing.rs  transport.rs  write.rs
crates/openlogi-hidpp/: Cargo.toml  README.md
crates/openlogi-hidpp/src/: channel.rs  event.rs
crates/openlogi-hidpp/src/feature/: registry.rs
crates/openlogi-hidpp/src/receiver/: bolt.rs  mod.rs  unifying.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: frontmost_app.rs
crates/openlogi-hook/src/: lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
crates/openlogi-inject/: Cargo.toml
crates/openlogi-inject/src/: inject.rs
crates/optminus-gui/src/: main.rs
design/: LICENSE
docs/: DEVELOPMENT.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md
nix/: package.nix
packaging/linux/: nfpm.yaml
scripts/: cargo-run-macos.sh  package-macos.sh
scripts/release-notes/: generate.ts  package.json  pnpm-lock.yaml
xtask/: Cargo.toml
xtask/src/: linux.rs  macos.rs  main.rs  manifest.rs  util.rs
