[package]
name = "openlogi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, config, and paths for OpenLogi. No I/O specifics."

[dependencies]
# Serde + TOML: config persistence is the only I/O this crate does.
serde = { workspace = true }
toml = { workspace = true }
# Typed library errors.
thiserror = { workspace = true }
# Cross-OS application data directories.
directories = { workspace = true }
# Structured logging (instrumentation only; no subscriber).
tracing = { workspace = true }

[dev-dependencies]
# Scratch directories for config-roundtrip tests.
tempfile = "3"

[lints]
workspace = true
